tests/expected_output/misspelt_printf/000001-clang-13.0-x86_64-pc-linux-gnu.txt
tests/extracted_compile_time_errors/misspelt_printf.c:3:5: warning: implicit declaration of function 'print' is invalid in C99 [-Wimplicit-function-declaration]
    print("hello");
    ^
dcc explanation: you are calling a function named print on line 3 of tests/extracted_compile_time_errors/misspelt_printf.c but dcc does not recognize print as a function.
Maybe you meant printf?

/bin/ld: /tmp/misspelt_printf-e13d57.o: in function `main':
/home/andrewt/w/dcc/src/tests/extracted_compile_time_errors/misspelt_printf.c:3: undefined reference to `print'
clang: error: linker command failed with exit code 1 (use -v to see invocation)
